<resources>
    <string name="app_name">PayBuddy</string>
    <string name="tab_history">History</string>
    <string name="tab_home">Home</string>
    <string name="tab_expired">Expired</string>
    <string name="Paid">Register as paid</string>
    <string name="EnterLocation">Enter location</string>
    <string name="tab_selector">Your occasions</string>
    <string name="tab_occasions">Occasions</string>
    <string name="overview">Overview</string>
    <string name="Tab1">Tab 1</string>
    <string name="Tab2">Tab 2</string>
    <string name="Tab3">Tab 3</string>
    <string name="editButton">Preview</string>
    <string name="Title">Title</string>
    <string name="Back">Back</string>
    <string name="timesUp">Times up!</string>
    <string name="OK">Save</string>
    <string name="CANCEL">Discard</string>
    <string name="DATE">Date</string>
    <string name="ExpiringDate">Expiring date</string>
    <string name="TotalCost">Total cost</string>
    <string name="AddItems">Add items</string>
    <string name="AddItem">Add item</string>
    <string name="Items">Items</string>
    <string name="PersonName">Person name</string>
    <string name="Price">Price</string>
    <string name="Quantity">Quantity</string>
    <string name="NameOfPerson">Person name</string>
    <string name="NameOfAllPeople">People</string>
    <string name="OKBUTTON">OK</string>
    <string name="OccasionAdded">Occasion added</string>
    <string name="ItemName">Item name</string>
    <string name="Register_new_occasion">Register new occasion</string>
    <string name="remove">Remove</string>
    <string name="preview">Preview</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="title">Enter title</string>
    <string name="call">Contact</string>
    <string name="postpone">Postpone</string>
    <string name="SUM_OF_ITEMS_COST">Total item costs</string>
    <string name="SUM_OF_OCCASIONS">Active occasions</string>
    <string name="SUM_OF_EXPIRED">Total expired occasions</string>
    <string name="SUM_OF_PAID_OCCASIONS">History occasions count</string>
    <string name="Delete_all_occasions">Delete all active occasions</string>
    <string name="Delete_history">Delete history</string>
    <string name="Delete_all_expired">Delete all expired occasions</string>
    <string name="Manage_layout_style">Layout style</string>
    <string name="handle_app">Settings</string>
    <string name="Delete">Delete</string>
    <string name="decision_cancel">Cancel</string>
    <string name="warning_text">Are you sure?</string>
    <string name="search">Search</string>
    <string name="expire">Expire occasion</string>
    <string name="expire_the_occasion">Expire occasion?</string>
    <string name="book_calendar">Book event in calendar?</string>
    <string name="call_history">Call History</string>
    <string name="contacts">Contacts</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Contacts">Contacts</string>
    <string name="phone_number">Phone number</string>
    <string name="call_text">Call</string>
    <string name="type">Type</string>
    <string name="calling_phone_icon">Calling phone icon</string>
    <string name="money_icon">Money icon</string>
    <string name="style_icon">Style icon</string>

    <string name="warning_icon">Warning icon</string>
    <string name="occasion_icon">Active occasion icon</string>
    <string name="history_icon">History icon</string>
    <string name="remove_icon">Remove icon</string>
    <string name="loading">Loading...</string>
    <string name="no_location_added">No location added!</string>
    <string name="total_items">Total items: </string>
    <string name="pick_a_date">Pick a date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="styling_header">Styling</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="dark_mode">Enable dark mode</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sync_header">Sync</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="lat">Lat:</string>
    <string name="_0_00">0.00</string>
    <string name="lon">lon:</string>
    <string name="altitude">Altitude:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="sensor_mode">Sensor mode:</string>
    <string name="highest_location_accuracy">Highest location accuracy</string>
    <string name="updates">Updates:</string>
    <string name="off">Off</string>
    <string name="location_updates">Location Updates</string>
    <string name="high_low">High/Low</string>
    <string name="no_address_found">No address found</string>
    <string name="address">Address:</string>
    <string name="swipe_to_update">Swipe up to update</string>
    <string name="button_wipe_data">Button</string>
    <string name="wipe_all_data">Wipe all data</string>
    <string name="clear_items">Clear items</string>
    <string name="location">Location</string>
    <string name="see_location_on_maps">See location on maps</string>
    <string name="see_all_locations">See all locations</string>
    <string name="how_does_this_app_work">How does this app work?</string>
    <string name="info">Info</string>
    <string name="status">Status</string>
    <string name="you_can_expire_any_active_occasion_by_pressing_the_occasion_until_a_dialog_asks_you_to_accept">You can expire any active occasion by pressing the occasion until a dialog asks you to accept.</string>
    <string name="how_do_i_expire_a_occasion">How do I expire an occasion?</string>
    <string name="for_every_active_and_expired_occasion_we_take_the_item_prices_multiplied_by_the_quantity">For every active and expired occasion we take the item prices multiplied by the quanity.</string>
    <string name="how_does_this_app_calculate_total_item_cost">How does this app calculate total item cost?</string>
    <string name="these_are_not_paid_before_the_expiring_date">These are not paid before the expiring date.</string>
    <string name="_3_expired_occasion">3. Expired occasion</string>
    <string name="these_are_not_marked_as_paid">These are not marked as paid.</string>
    <string name="_2_history_occasion">2. History occasion</string>
    <string name="these_are_marked_as_paid">These are marked as paid.</string>
    <string name="_1_active_occasion">1. Active occasion</string>
    <string name="about_this_app">About this app</string>
    <string name="we_have_3_types_of_occasion">We have 3 types of occasions.</string>
</resources>