<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="@color/card_history_outline"
    app:cardCornerRadius="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_margin="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_outline">

            <TextView
                android:id="@+id/textView_list_history_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/price"
                android:textColor="@color/mainText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_list_history_title" />

            <TextView
                android:id="@+id/textView_list_history_names_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/total_items"
                android:textColor="@color/mainText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_list_history_expiringDate_text" />

            <TextView
                android:id="@+id/textView_list_history_expiringDate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/ExpiringDate"
                android:textColor="@color/mainText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_list_history_price_text" />

            <TextView
                android:id="@+id/textView_list_history_sum_of_items_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/SUM_OF_ITEMS_COST"
                android:textColor="@color/mainText"
                app:layout_constraintBottom_toBottomOf="@+id/textView_list_history_price_text"
                app:layout_constraintStart_toEndOf="@+id/textView_list_history_price_text"
                app:layout_constraintTop_toTopOf="@+id/textView_list_history_price_text" />

            <TextView
                android:id="@+id/textView_list_history_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/Title"
                android:textColor="@color/mainText"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_list_history_names_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/_0_00"
                android:textColor="@color/mainText"
                app:layout_constraintBottom_toBottomOf="@+id/textView_list_history_names_text"
                app:layout_constraintStart_toEndOf="@+id/textView_list_history_names_text"
                app:layout_constraintTop_toTopOf="@+id/textView_list_history_names_text" />

            <TextView
                android:id="@+id/textView_list_history_expiringDate_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/ExpiringDate"
                android:textColor="@color/mainText"
                app:layout_constraintBottom_toBottomOf="@+id/textView_list_history_expiringDate_text"
                app:layout_constraintStart_toEndOf="@+id/textView_list_history_expiringDate_text"
                app:layout_constraintTop_toTopOf="@+id/textView_list_history_expiringDate_text" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/history_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_history_24" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/location"
                android:textColor="@color/mainText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_list_history_names_text" />

            <TextView
                android:id="@+id/textView_list_history_location_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="2dp"
                android:text="@string/no_location_added"
                android:textColor="@color/mainText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView33" />

            <Button
                android:id="@+id/buttonRemoveHistory"
                android:layout_width="330dp"
                android:layout_height="42dp"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="22dp"
                android:layout_marginRight="22dp"
                android:background="@drawable/button_background"
                android:text="@string/remove"
                android:textColor="@color/buttonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider7" />

            <Button
                android:id="@+id/buttonHistoryPostPone"
                android:layout_width="330dp"
                android:layout_height="42dp"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="22dp"
                android:layout_marginRight="22dp"
                android:background="@drawable/button_background"
                android:text="@string/postpone"
                android:textColor="@color/buttonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonRemoveHistory" />

            <Button
                android:id="@+id/buttonHistoryLocation"
                android:layout_width="330dp"
                android:layout_height="42dp"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="22dp"
                android:layout_marginRight="22dp"
                android:background="@drawable/button_background"
                android:text="@string/see_location_on_maps"
                android:textColor="@color/buttonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonHistoryPostPone" />

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/textView_list_history_location_value"
                tools:layout_editor_absoluteX="5dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>