<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:elevation="5dp"
    app:cardBackgroundColor="@color/cardBackground"
    app:cardCornerRadius="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="187dp"
        android:layout_margin="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_list_due_payment_title_text"
                android:layout_width="35dp"
                android:layout_height="0dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/title"
                android:textColor="@color/mainText"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_list_due_payment_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/price"
                android:textColor="@color/mainText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_list_due_payment_title_text" />

            <TextView
                android:id="@+id/textView_list_due_payment_names_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/NameOfPerson"
                android:textColor="@color/mainText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_list_due_payment_expiringDate_text" />

            <TextView
                android:id="@+id/textView_list_due_payment_expiringDate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/ExpiringDate"
                android:textColor="@color/mainText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_list_due_payment_price_text" />

            <TextView
                android:id="@+id/textView_list_due_payment_sum_of_items_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/SUM_OF_ITEMS_COST"
                android:textColor="@color/mainText"
                app:layout_constraintBottom_toBottomOf="@+id/textView_list_due_payment_price_text"
                app:layout_constraintStart_toEndOf="@+id/textView_list_due_payment_price_text"
                app:layout_constraintTop_toTopOf="@+id/textView_list_due_payment_price_text" />

            <TextView
                android:id="@+id/textView_list_due_payment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/Title"
                android:textColor="@color/mainText"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView_list_due_payment_title_text"
                app:layout_constraintStart_toEndOf="@+id/textView_list_due_payment_title_text"
                app:layout_constraintTop_toTopOf="@+id/textView_list_due_payment_title_text" />

            <TextView
                android:id="@+id/textView_list_due_payment_names_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/NameOfAllPeople"
                android:textColor="@color/mainText"
                app:layout_constraintBottom_toBottomOf="@+id/textView_list_due_payment_names_text"
                app:layout_constraintStart_toEndOf="@+id/textView_list_due_payment_names_text"
                app:layout_constraintTop_toTopOf="@+id/textView_list_due_payment_names_text" />

            <TextView
                android:id="@+id/textView_list_due_payment_expiringDate_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/ExpiringDate"
                android:textColor="@color/mainText"
                app:layout_constraintBottom_toBottomOf="@+id/textView_list_due_payment_expiringDate_text"
                app:layout_constraintStart_toEndOf="@+id/textView_list_due_payment_expiringDate_text"
                app:layout_constraintTop_toTopOf="@+id/textView_list_due_payment_expiringDate_text" />

            <Button
                android:id="@+id/buttonCall"
                android:layout_width="130dp"
                android:layout_height="47dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_background"
                android:text="@string/call"
                android:textColor="@color/mainText"
                app:layout_constraintBottom_toTopOf="@+id/buttonPostpone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider13"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider13"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonPostpone"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonPostpone"
                android:layout_width="130dp"
                android:layout_height="47dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_background"
                android:text="@string/postpone"
                android:textColor="@color/mainText"
                app:layout_constraintBottom_toTopOf="@+id/buttonDeleteDuePayment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonCall" />

            <Button
                android:id="@+id/buttonDeleteDuePayment"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_background"
                android:text="@string/remove"
                android:textColor="@color/mainText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider13"
                app:layout_constraintTop_toBottomOf="@+id/buttonPostpone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>